...
    <string name="save_all_answers" cc:translatable="true">Save Form</string>
    <string name="saving_form" cc:translatable="true">Saving Form</string>
    <string name="trigger" cc:translatable="true">OK. Please continue.</string>
    <string name="view_hierarchy" cc:translatable="true">Go To Prompt</string>
    <string name="form_entry_settings" cc:translatable="true">Change Settings</string>
    <string name="show_location" cc:translatable="true">Show Location</string>
    <string name="keep_changes" cc:translatable="true">SAVE INCOMPLETE</string>
    <string name="go_to_location" cc:translatable="true">Go to Location</string>
    <string name="font_size" cc:translatable="true">Text Font Size</string>
    <string name="change_font_size" cc:translatable="true">Text Font Size</string>
    <string name="success" cc:translatable="true">Success</string>
    <string name="choose_sound" cc:translatable="true">Choose Sound</string>
    <string name="choose_video" cc:translatable="true">Choose Video</string>
...
    <string name="change_settings" cc:translatable="true">Change Settings</string>
    <string name="finding_location" cc:translatable="true">Finding Location...</string>
    <string name="found_location" cc:translatable="true">Location Found!</string>
    <string name="preference_help_mode_tray" cc:translatable="true">Display Rich Help Inline</string>
    <string name="reset_image" cc:translatable="true">Reset</string>
    <string name="save_and_close" cc:translatable="true">Save and Close</string>
    <string name="sign_button" cc:translatable="true">Gather Signature</string>
    <string name="markup_image" cc:translatable="true">Markup Image</string>
    <string name="draw_image" cc:translatable="true">Sketch Image</string>
    <string name="share" cc:translatable="true">Share</string>
    <string name="title_data_change_logs_activity" cc:translatable="true">Data Change Logs</string>
    <string name="commcare_logs" cc:translatable="true">CommCare Data Change Logs</string>
    <string name="clear_user_data_delete_form" cc:translatable="true">Delete Forms</string>
...
