...
        android:gravity="center_vertical"
        android:paddingStart="@dimen/content_start"
        android:paddingEnd="@dimen/content_start">

        <ImageButton
            android:rotationY="@integer/locale_mirror_flip"
            android:id="@+id/nav_btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_button_press"
            android:minHeight="@dimen/new_progressbar_button_minheight"
            android:minWidth="@dimen/new_progressbar_button_minwidth"
...
